whitespace trimmed, lots of other format/style sweeps incremented

--- a/src/templates/screens/AdvancedQuery.vm
+++ b/src/templates/screens/AdvancedQuery.vm
@@ -1,49 +1,34 @@
 <div class="app" id="advancedquery">
-$page.setTitle("Advanced Query")
-
+$page.setTitle("Advanced query")
 <h2>$page.Title</h2>
-
 #set ($module = $scarabR.CurrentModule)
-
 #if (!$module)
- <div class="alert">
- The currently selected module is invalid.
- Please select another module.
- </div>
+ <p><strong class="alert">
+ The currently selected module is invalid. Please select another module.
+ </strong></p>
 #else
-
 <form action="$link.setPage("AdvancedQuery.vm")" method="post">
 <input type="hidden" name="nextTemplate" value="IssueList.vm" />
 <input type="hidden" name="action" value="Search" />
 <input type="hidden" name="searchType" value="advanced" />
-<input type="hidden" name="pageNum" value="1" /> 
-
+<input type="hidden" name="pageNum" value="1" />
 <div class="functnbar">
-<table cellpadding="0" cellspacing="0" border="0">
+<table cellpadding="4" cellspacing="0" border="1">
  <tr>
-  <td><input type="submit" name="eventSubmit_doSearch" value="Search" />&#160;</td>
-  <td><input type="submit" name="eventSubmit_doCancel" value="Cancel" />&#160;</td>
-  <td><input type="submit" name="eventSubmit_doRedirecttosavequery" value="Save this Query" /></td>
+  <td class="firstchild"><input type="submit" name="eventSubmit_doSearch" value="Search" />&#160; <input type="submit" name="eventSubmit_doCancel" value="Cancel" />&#160; <input type="submit" name="eventSubmit_doRedirecttosavequery" value="Save this query" /></td>
  </tr>
 </table>
 </div>
-
-<h3>Search the Scarab Knowledge Base</h3>
-
+<h3>Search the Scarab knowledge base</h3>
 #advancedQuery()
-
 <div class="functnbar2">
-<table cellpadding="0" cellspacing="0" border="0">
+<table cellpadding="4" cellspacing="0" border="1">
  <tr>
-  <td><input type="submit" name="eventSubmit_doSearch" value="Search" />&#160;</td>
-  <td><input type="submit" name="eventSubmit_doCancel" value="Cancel" />&#160;</td>
-  <td><input type="submit" name="eventSubmit_doRedirecttosavequery" value="Save this Query" /></td>
+  <td class="firstchild"><input type="submit" name="eventSubmit_doSearch" value="Search" />&#160; <input type="submit" name="eventSubmit_doCancel" value="Cancel" />&#160; <input type="submit" name="eventSubmit_doRedirecttosavequery" value="Save this query" /></td>
  </tr>
 </table>
 </div>
-  
 $intake.declareGroups()
 </form>
-
-</div>
 #end
+</div>
