--- a/src/templates/macros/ViewIssueMacro.vm
+++ b/src/templates/macros/ViewIssueMacro.vm
@@ -3,30 +3,23 @@
     #set ($module = $scarabR.CurrentModule)
     #set ( $canEdit = $security.hasPermission("Issue | Edit", $module) )
     #set ($attrValues = $currentIssue.ModuleAttributeValuesMap)
-
        #datatitle ("Issue ID #$currentIssue.UniqueId")
-
       <div class="axial">
        <table cellpadding="3" cellspacing="2" border="0">
         <tr>
          <th width="120">Issue ID #</th>
          <td>#$currentIssue.UniqueId</td>
         </tr>
-
 #foreach ( $attKey in $attrValues.sequence() )
   #set ( $attVal = $attrValues.get($attKey))
-  #set ( $attrInput = $intake.AttributeValue.mapTo($attVal) ) 
-
-
+  #set ( $attrInput = $intake.AttributeValue.mapTo($attVal) )
   #if ( $attVal.Attribute.AttributeType.ValidationKey )
         #set ( $field = $attVal.Attribute.AttributeType.ValidationKey )
   #elseif ($attVal.Attribute.AttributeType.Name == "combo-box" )
         #set ( $field = "OptionId" )
   #else
-        #set ( $field = "Value" )  
+        #set ( $field = "Value" )
   #end
-
-
   #if( $canEdit )
          <tr>
           <th width="120">$attVal.Attribute.Name</th>
@@ -36,24 +29,22 @@
         #attrValueErrorMsg ( $attVal $field )
     #else
         #attrValueErrorMsg( $attVal "Value" )
-        #if ($attVal.Attribute.AttributeType.Name == "long-string" )        
-            <textarea name="$attrInput.Value.Key" cols="40" 
+        #if ($attVal.Attribute.AttributeType.Name == "long-string" )
+            <textarea name="$attrInput.Value.Key" cols="40"
                rows="5">$!attrInput.Value</textarea>
         #else
            <input name= "$attrInput.Value.Key"
                 value="$!attrInput.Value" size="20" type="text">
-
         #end
     #end
           </td>
          </tr>
-
   #else
     #if ($attVal.isSet())
          <tr>
           <th width="120">$attVal.Attribute.Name</th>
           <td>
-       #set ( $attrInput = $intake.AttributeValue.mapTo($attVal) ) 
+       #set ( $attrInput = $intake.AttributeValue.mapTo($attVal) )
        #if ($attVal.Attribute.AttributeType.Name == "combo-box" )
           $!attVal.AttributeOption.Name
        #else
@@ -63,18 +54,14 @@
           </td>
          </tr>
   #end
-  
 #end
-
-
 #if ( $canEdit )
          <tr>
            <th>Comment</th>
            <td>
-           
         #set( $attCommentGroup = $intake.Attachment.setKey("attCommentKey") )
          #fieldErrorMsg($attCommentGroup.DataAsString "<br />")
-           <textarea rows="4" cols="35" class="text" name ="$attCommentGroup.DataAsString.Key">$!attCommentGroup.DataAsString.Value</textarea>
+           <textarea rows="4" cols="35" name ="$attCommentGroup.DataAsString.Key">$!attCommentGroup.DataAsString.Value</textarea>
            <input type="hidden" name="$attCommentGroup.Name.Key" value="comment">
            <p>
 Please add a comment to explain your change(s)
@@ -87,11 +74,8 @@ Please add a comment to explain your change(s)
 #end
         </table>
        </div>
-
 ### ASSIGNEES
-
       <h3>Personnel</h3>
-
       <div class="axial">
        <table cellpadding="3" cellspacing="2" border="0">
         <tr>
@@ -99,7 +83,6 @@ Please add a comment to explain your change(s)
         #set ($createdUser = $currentIssue.CreatedBy)
          <td><a href="mailTo:$createdUser.Email">$createdUser.UserName</a></td>
         </tr>
-
         <tr>
          <th width="120">Assignee(s)</th>
          <td>
@@ -109,7 +92,7 @@ Please add a comment to explain your change(s)
         #foreach ($assignee in $currentIssue.AssigneeAttributeValues)
           #if( $velocityCount == $currentIssue.AssigneeAttributeValues.size() )
               #set( $comma = "")
-          #else 
+          #else
               #set( $comma = ",")
           #end
           #set ($assignedUser = $scarabR.getUser($assignee.UserId) )
@@ -128,27 +111,21 @@ Please add a comment to explain your change(s)
         #end
        </table>
       </div>
-
 ## URLS
 #if (!$currentIssue.Urls.isEmpty() || $canEdit)
-
        #datatitle ("Related Links")
-
         <table width="100%" border="1" cellspacing="2" cellpadding="3">
          <tr>
           <th><img src="/scarab/images/icon_uparrow.gif" width="13" height="8" alt="sort" border="0" />
               <img src="/scarab/images/icon_downarrow.gif" width="13" height="8" alt="sort" border="0" />
           </th>
-
           <th>URL</th>
-
           <th>Description</th>
          </tr>
-
     #foreach($url in $currentIssue.Urls)
          #if( $velocityCount % 2 > 0 )
             <tr class="a">
-         #else 
+         #else
             <tr class="b">
          #end
           <td>
@@ -158,48 +135,34 @@ Please add a comment to explain your change(s)
             &nbsp;
           #end
           </td>
-
-          <td><input type="text" size="25" class="text" value="$url.Name" /> </td>
-
-          <td><input type="text" size="25" class="text" value="$url.DataAsString" /></td>
+          <td><input type="text" size="25" value="$url.Name" /> </td>
+          <td><input type="text" size="25" value="$url.DataAsString" /></td>
          </tr>
     #end
-   
     #if ($canEdit)
          <tr>
           <td><strong>Add url:</strong></td>
-
 #set( $urlGroup = $intake.Attachment.setKey("urlKey") )
           <td>
          #fieldErrorMsg($urlGroup.Name "<br />")
-         <input type="text" size="25" class="text" name="$urlGroup.Name.Key" value="$!urlGroup.Name" />
+         <input type="text" size="25" name="$urlGroup.Name.Key" value="$!urlGroup.Name" />
          </td>
-
           <td>
          #fieldErrorMsg($urlGroup.DataAsString "<br />")
-         <input type="text" size="25" class="text" name="$urlGroup.DataAsString.Key" value="$!urlGroup.DataAsString"/>
+         <input type="text" size="25" name="$urlGroup.DataAsString.Key" value="$!urlGroup.DataAsString"/>
           </td>
-
          </tr>
-
     #end
         </table>
     #if ($canEdit)
            <p><input type="submit" value="add url" name="eventSubmit_doSubmiturl"  />&#160;<input type="submit" value="delete url"  name="eventSubmit_doDeleteurl" /></p>
     #end
-
 #end
-
-
-
 ## ADD DEPENDENCY
 #if ($canEdit)
-
 #set( $dependGroup = $intake.Depend.setKey("dependKey") )
 <input type="hidden" name="$dependGroup.ObserverId.Key" value="$currentIssue.IssueId">
-
 #datatitle ("Add Dependency")
-
  #if (!$dependGroup.ObservedId.Message.equals(""))
  <p><strong class="alert">$dependGroup.ObservedId.Message</strong></p>
  #end
@@ -220,44 +183,32 @@ Please add a comment to explain your change(s)
   </select></p>
     </td>
  </tr>
-<tr><td>&nbsp;</td><td><input type="submit" value="add dependency"  name="eventSubmit_doAdddependency" /></td></tr> 
+<tr><td>&nbsp;</td><td><input type="submit" value="add dependency"  name="eventSubmit_doAdddependency" /></td></tr>
 </table>
 </div>
-       
-
 #end
-
 </div>
-
 ## PARENT ISSUES
 #if (!$currentIssue.Parents.isEmpty() )
-
       #datatitle ("Parent Issues")
-
         <table width="100%" border="1" cellspacing="2" cellpadding="3">
          <tr>
-
           <th width="20%">issue id#</th>
-
           <th width="40%">issue summary</th>
-
           <th>dependency type</th>
          </tr>
-
        #foreach( $parent in $currentIssue.Parents )
          #if( $velocityCount % 2 > 0 )
             <tr class="a">
-         #else 
+         #else
             <tr class="b">
          #end
           <td><a href="$link.setPage("ViewIssue.vm").addPathInfo("id", $parent.IssueId)">$parent.UniqueId</a></td>
-
              #set ($parentAttrValues = $parent.AllAttributeValuesMap)
              #set ($attVal = $parentAttrValues.get("SUMMARY"))
           <td>
             <a href="$link.setPage("ViewIssue.vm").addPathInfo("id", $parent.IssueId)">$attVal.Value</a>
           </td>
-
           <td>
    #if ($canEdit)
         <select name="parent_depend_type_id_$parent.IssueId" class="select">
@@ -277,45 +228,32 @@ Please add a comment to explain your change(s)
           </td>
          </tr>
        #end
-
         </table>
 #if ($canEdit)
        <p><input type="submit"  name="eventSubmit_doUpdateparent" value="update parent issue" /></p>
 #end
-
 #end
-
-
 ## CHILD ISSUES
 #if (!$currentIssue.Children.isEmpty() )
-
        #datatitle ("Child Issues")
-
         <table width="100%" border="1" cellspacing="2" cellpadding="3">
          <tr>
-
           <th width="20%">issue id#</th>
-
           <th width="40%">issue summary</th>
-
           <th>dependency type</th>
          </tr>
-
        #foreach( $child in $currentIssue.Children )
          #if( $velocityCount % 2 > 0 )
             <tr class="a">
-         #else 
+         #else
             <tr class="b">
          #end
-
           <td><a href="$link.setPage("ViewIssue.vm").addPathInfo("id", $child.IssueId)">$child.UniqueId</a></td>
-
           #set ($childAttrValues = $child.AllAttributeValuesMap)
           #set($attVal =  $childAttrValues.get("SUMMARY"))
           <td>
             <a href="$link.setPage("ViewIssue.vm").addPathInfo("id", $child.IssueId)">$attVal.Value</a>
           </td>
-
            <td>
     #if ($canEdit)
             <select name="child_depend_type_id_$child.IssueId" class="select">
@@ -336,39 +274,30 @@ Please add a comment to explain your change(s)
           </td>
          </tr>
        #end
-
         </table>
-
     #if ( $canEdit )
        <p><input type="submit" value="update child issue"  name="eventSubmit_doUpdatechild" />
     #end
 #end
 #if (!$currentIssue.Comments.isEmpty() || $canEdit)
-
 ## COMMENTS
-
 <h3>Comments</h3>
-
       <div class="axial">
        <table cellpadding="3" cellspacing="2" border="0">
-
     #foreach($comment in $currentIssue.Comments)
         <tr>
          <th width="60">$format.getDate($scarabG.DateFormat, $comment.CreatedDate)
        #set ( $commentUser = $scarabR.getUser($comment.CreatedBy) )
          <a href="mailto:$commentUser.Email">$commentUser.FirstName $commentUser.LastName</a>
          </th>
-
          <td>
          #if ($security.hasPermission("Module | Edit"))
-           <textarea rows="2" cols="35" class="text" name="edit_comment_$comment.AttachmentId">$comment.DataAsString</textarea>
+           <textarea rows="2" cols="35" name="edit_comment_$comment.AttachmentId">$comment.DataAsString</textarea>
          #else
            $comment.DataAsString
          #end</td>
         </tr>
-
     #end
-
     #if ( $canEdit )
          <tr>
           <th>Add comment</td>
@@ -382,7 +311,7 @@ Please add a comment to explain your change(s)
          <tr>
          <td>&nbsp;</td>
          <td>
-           <input type="submit" value="add comment" name="eventSubmit_doSubmitcomment"/>&#160; 
+           <input type="submit" value="add comment" name="eventSubmit_doSubmitcomment"/>&#160;
          #if ($security.hasPermission("Module | Edit"))
            <input type="submit" value="edit comment(s)" name="eventSubmit_doEditcomment"/>
          #end
@@ -391,31 +320,24 @@ Please add a comment to explain your change(s)
         </table>
        </div>
 #end
-
 #if ($fullHistory.equals("true"))
   #set( $activity = $currentIssue.getActivity(true) )
 #else
   #set( $activity = $currentIssue.getActivity(false) )
 #end
 #if (!$activity.isEmpty() )
-
 ## ISSUE HISTORY
-
        #datatitle ("Issue History (up to first ten)")
-
         <table width="100%" cellpadding="3" cellspacing="2" border="1">
          <tr>
           <th width="120">date stamp</th>
-
           <th>action</th>
-
           <th>note</th>
          </tr>
-
        #foreach( $act in $activity )
          #if( $velocityCount % 2 > 0 )
             <tr class="a">
-         #else 
+         #else
             <tr class="b">
          #end
           <td width="120">
@@ -423,7 +345,7 @@ Please add a comment to explain your change(s)
               $format.getDate($scarabG.DateFormat, $act.Transaction.CreatedDate)
             #end
           </td>
-          <td width="120">$act.Description 
+          <td width="120">$act.Description
 #*
              #if (!$act.OldValue.equals(""))
                   from '$act.OldValue'
@@ -434,26 +356,21 @@ Please add a comment to explain your change(s)
 *#
           </td>
           <td>
-             #if ($act.Transaction.Attachment) 
+             #if ($act.Transaction.Attachment)
              $act.Transaction.Attachment.DataAsString
              #else &nbsp; #end
           </td>
          </tr>
        #end
-
         </table>
-
-
 #if ($currentIssue.isHistoryLong())
    #if ($fullHistory.equals("true"))
-        #set ( $historyLink = $link.setPage("ViewIssue.vm").addPathInfo("id", $currentIssueId).addPathInfo("fullhistory", "false") ) 
+        #set ( $historyLink = $link.setPage("ViewIssue.vm").addPathInfo("id", $currentIssueId).addPathInfo("fullhistory", "false") )
         <p><a href="$historyLink">hide complete history</a></p>
    #else
         #set ( $historyLink = $link.setPage("ViewIssue.vm").addPathInfo("id", $currentIssueId).addPathInfo("fullhistory", "true") )
         <p><a href="$historyLink">show complete history</a></p>
    #end
 #end
-
 #end
-
 #end
