--- a/src/templates/screens/MoveIssue.vm
+++ b/src/templates/screens/MoveIssue.vm
@@ -1,28 +1,21 @@
 <div class="app" id="moveissue">
 $page.setTitle("Copy / Move Issue")
-
 <h2>$page.Title</h2>
-
 #set ($action = $link.setPage("MoveIssue.vm").setAction("MoveIssue").addPathInfo("nextTemplate", "MoveIssue2.vm"))
 #set ($user = $data.User)
 #set ($currentModule = $scarabR.CurrentModule)
 #set ($moduleId = $data.Parameters.getString("module_id"))
 #set ($issueId = $data.Parameters.getString("id"))
 #set ($issue = $scarabR.getIssue($issueId))
-
 <form method="post" action="$action">
 <input type="hidden" name="id" value="$issueId">
-
-<div class="functnbar">
-<table cellpadding="0" cellspacing="0" border="0">
+<div class="functnbar"><table cellpadding="4" cellspacing="0" border="1">
  <tr>
-  <td><input type="submit" value="Next" name="eventSubmit_doMapattributes" /></td>
+  <td class="firstchild"><input type="submit" value="Next" name="eventSubmit_doMapattributes" /></td>
  </tr>
 </table>
 </div>
-
 <h3>Issue to be Copied / Moved</h3>
-
 <table width="100%" border="1" cellspacing="2" cellpadding="3">
  <tr>
   <th>Summary</th>
@@ -35,7 +28,7 @@ $page.setTitle("Copy / Move Issue")
    #set( $attVal =  $AttrValues.get("SUMMARY"))
    #set ( $attrInput = $intake.AttributeValue.mapTo($attVal) )
    $attVal.Value
-  </td>  
+  </td>
   <td>$format.getDate($scarabG.DateFormat, $issue.CreatedDate)</td>
   <td>
    #set ($createdUser = $issue.CreatedBy)
@@ -43,9 +36,8 @@ $page.setTitle("Copy / Move Issue")
   </td>
  </tr>
 </table>
-   
 <h3>Destination Module</h3>
-<p> 
+<p>
 <select name="module_id">
  <option>Select Module...</option>
  #foreach( $module in $security.getModules($user, "Issue | Enter") )
@@ -57,26 +49,22 @@ $page.setTitle("Copy / Move Issue")
  #end
 </select>
 </p>
-
 <h3>Action</h3>
-<p><input type="radio" name="select_action" value="copy" 
+<p><input type="radio" name="select_action" value="copy"
 #if ($select_action.equals("copy") )
  checked
 #end /> Copy
 </p>
-<p><input type="radio" name="select_action" value="move" 
+<p><input type="radio" name="select_action" value="move"
 #if ($select_action.equals("move") )
  checked
 #end /> Move
-</p>  
-
-<div class="functnbar2">
-<table cellpadding="0" cellspacing="0" border="0">
+</p>
+<div class="functnbar2"><table cellpadding="4" cellspacing="0" border="1">
  <tr>
-  <td><input type="submit" value="Next" name="eventSubmit_doMapattributes" /></td>
+  <td class="firstchild"><input type="submit" value="Next" name="eventSubmit_doMapattributes" /></td>
  </tr>
 </table>
 </div>
-
 </form>
 </div>
