--- a/src/templates/screens/admin/GlobalAttributeSelect.vm
+++ b/src/templates/screens/admin/GlobalAttributeSelect.vm
@@ -1,10 +1,8 @@
 
 $page.setTitle("Global Attribute Select")
-        
 <form action="$link.setPage("admin,GlobalAttributeSelect.vm")" method="get">
     <input type="hidden" name="action" value="admin.ModifyModuleAttributes">
     <input type="hidden" name="groupId" value = "$data.Parameters.getString("groupId")")
-
         <div class="tabs">
             <table cellpadding="3" cellspacing="0" border="0">
             <tr>
@@ -13,13 +11,9 @@ $page.setTitle("Global Attribute Select")
             </tr>
             </table>
         </div>
-
-
-        <div class="functnbar">
-            <table cellpadding="0" cellspacing="0" border="0">
-            <tr>
-            <td><strong>select items to:</strong></td>
-            <td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
+        <div class="functnbar"><table cellpadding="4" cellspacing="0" border="1">
+ <tr>
+  <td class="firstchild"><strong>select items to:</strong></td>
             <td><strong>general functions</strong></td>
             </tr>
             <tr>
@@ -29,14 +23,10 @@ $page.setTitle("Global Attribute Select")
                <input type="submit" value="create new" />
             #end
             &nbsp;<input type="submit" value="cancel" name="eventSubmit_doCancel" /></td>
-
             </tr>
             </table>
         </div>
-        
-        
         <h3>Global attributes</h3>
-        
         <table width="100%" border="1" cellspacing="2" cellpadding="3">
         <tr>
         <th nowrap="nowrap"><a href="#"><img src="../csi/images/icon_uparrow_off.gif" width="13" height="8" alt="sort ascending" border="0" /></a><img src="../csi/images/icon_downarrow_on.gif" width="13" height="8" alt="sort descending" border="0" /></th>
@@ -46,9 +36,7 @@ $page.setTitle("Global Attribute Select")
         <th><a href="#" title="sort">author</a></th>
         <th><a href="#" title="sort">creation date</a></th>
         </tr>
-        
 #set ($allAttributes = $scarabR.CurrentModule.AvailableAttributes)
-
 #foreach( $attribute in $allAttributes )
         #rows()
         <td><input type="radio" name="attributeId" value="$attribute.AttributeId" /></td>
@@ -61,14 +49,9 @@ $page.setTitle("Global Attribute Select")
         </tr>
 #end
         </table>
-
-
-        
-        <div class="functnbar">
-            <table cellpadding="0" cellspacing="0" border="0">
-            <tr>
-            <td><strong>select items to:</strong></td>
-            <td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
+        <div class="functnbar"><table cellpadding="4" cellspacing="0" border="1">
+ <tr>
+  <td class="firstchild"><strong>select items to:</strong></td>
             <td><strong>general functions</strong></td>
             </tr>
             <tr>
@@ -78,9 +61,7 @@ $page.setTitle("Global Attribute Select")
                <input type="submit" value="create new" />
             #end
             &nbsp;<input type="submit" value="cancel" name="eventSubmit_doCancel" /></td>
-
             </tr>
             </table>
         </div>
-        
     </div>
